Prepare 0.1.6 release
